refactor: 조회 응답 리스트 생성 시 Stream toList() 사용으로 통일